--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"type": "module",
+	"author": "Albuquerque ARTCC",
+  	"contributors": ["Austin Robison"],
 	"dependencies": {
-		"axios": "^0.20.0",
+		"axios": "^0.21.1",
 		"dotenv": "^8.2.0",
-		"mongoose": "^5.10.6",
+		"mongoose": "^5.11.9",
 		"mongoose-delete": "^0.5.2",
 		"node-schedule": "^1.3.2"
 	},
@@ -18,7 +20,6 @@
 		"url": "git+ssh://git@gitlab.com/zabartcc/roster-sync.git"
 	},
 	"keywords": [],
-	"author": "",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://gitlab.com/zabartcc/roster-sync/issues"
