--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -21,9 +21,9 @@ jobs:
         with:
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:${{ github.sha }}
-            ghcr.io/${{ github.repository }}:master
-            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/vzma/web-vatusa-sync:${{ github.sha }}
+            ghcr.io/vzma/web-vatusa-sync:master
+            ghcr.io/vzma/web-vatusa-sync:latest
   deploy-docker-image:
     needs: build-docker-image
     runs-on: ubuntu-latest
@@ -33,8 +33,8 @@ jobs:
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
       - name: Log into K8s cluster
-        run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 tcs
+        run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 k8s-zma-website
       - name: Deploy image to cluster
-        run: kubectl set image deployment/roster-sync roster-sync=ghcr.io/${{ github.repository }}:${{ github.sha }} --record -n zab-web-stack
+        run: kubectl set image deployment/roster-sync roster-sync=ghcr.io/vzma/web-vatusa-sync:${{ github.sha }} --record -n zma-web-stack
       - name: Verify deployment
-        run: kubectl rollout status deployment/roster-sync -n zab-web-stack
+        run: kubectl rollout status deployment/roster-sync -n zma-web-stack
