--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -3,7 +3,7 @@ name: Build and Deploy
 on:
   push:
     branches: [master]
-
+  workflow_dispatch:
 jobs: 
   build-docker-image:
     runs-on: ubuntu-latest
